discussion/kv_engine/126023/126023_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38673: Move duplicated unknown collection error code

A number of places want to return the unknown collection/scope status
so this is now moved to the server cookie API.

This change will also ensure that upstream changes don't expose
collections via the error context when a checkPrivilege call is made
for visibility checks.

Change-Id: I48fd8c362fb27ac20627468dc7294579b343920b

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2020-04-17 18:22:07.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-17 19:07:11.000000000
Message: 
Patch Set 2: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27592/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\active_stream.cc(2016): error C2065: "producer": undeclared identifier ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27592/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1766/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/mcbp_executors.cc:844:44: error: no member named "getStatusCode" in "cb::rbac::PrivilegeAccess"; did you mean "getStatus"? [clang-diagnostic-error]
            std::to_string(uint32_t(access.getStatusCode())));
                                           ^~~~~~~~~~~~~
                                           getStatus
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:225:12: note: "getStatus" declared here
    Status getStatus() const {
           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/mcbp_executors.cc:860:44: error: no member named "getStatusCode" in "cb::rbac::PrivilegeAccess"; did you mean "getStatus"? [clang-diagnostic-error]
            std::to_string(uint32_t(access.getStatusCode())));
                                           ^~~~~~~~~~~~~
                                           getStatus
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/memcached/rbac/privileges.h:225:12: note: "getStatus" declared here
    Status getStatus() const {
           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1766/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/mcbp_executors.cc:844:44:
error: no member named "getStatusCode" in "cb::rbac::PrivilegeAccess"; did you mean "getStatus"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1766/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23593/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23593/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3196/ : FAILURE

Compile error at [2020-04-17T18:56:21.434Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3196/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11048/ : FAILURE

Compile error at [2020-04-17T18:56:48.789Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/11048/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3257/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3180/ : FAILURE

Compile error at [2020-04-17T18:55:54.818Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: ?producer? was not declared in this scope
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3180/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2240/ : FAILURE

Compile error at [2020-04-17T18:26:54.452Z] ../kv_engine/engines/ep/src/dcp/active_stream.cc:2016:32:
error: use of undeclared identifier "producer"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2240/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/285/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
